# foam_ct_phantom

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py
_downloads/406059879d6b306c2f43e523b00d55e5/: 02_plot_phantom.py
_modules/: index.html
_sources/: index.rst.txt
apiref/: foam_ct_phantom.artifacts.html  foam_ct_phantom.ccode.html  foam_ct_phantom.expand.html  foam_ct_phantom.generate.html  foam_ct_phantom.geometry.html  foam_ct_phantom.html  foam_ct_phantom.infiltrate.html  foam_ct_phantom.phantom.html  foam_ct_phantom.project.html  foam_ct_phantom.utils.html  foam_ct_phantom.verticalmovement.html  modules.html
auto_examples/: 01_generate_phantom.html  02_plot_phantom.html  03_generate_projections_parallel.html  04_generate_projections_cone.html  05_expanding_phantom.html  06_moving_phantom.html  07_infiltration_phantom.html  08_poisson_noise.html  09_reconstruct_astra.html  index.html
conda/: conda_build_config.yaml  meta.yaml
docs/: Makefile  conf.py  index.rst
examples/: 01_generate_phantom.py  02_plot_phantom.py  03_generate_projections_parallel.py  04_generate_projections_cone.py  05_expanding_phantom.py  06_moving_phantom.py  07_infiltration_phantom.py  08_poisson_noise.py  09_reconstruct_astra.py  10_generate_nonuniform_phantom.py  11_3d_rendering.py
foam_ct_phantom/: __init__.py  artifacts.py  ccode.py  ccode_c.c  expand.py  generate.py  geometry.py  infiltrate.py  phantom.py  project.py  utils.py  verticalmovement.py
(+44 files in other folders)
