set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9" CACHE STRING "Minimum OS X deployment version")
PROJECT(CTFoamPhantom C)
cmake_minimum_required(VERSION 3.9)
add_library(ccode_c SHARED foam_ct_phantom/ccode_c.c)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -O3")
set_property(TARGET ccode_c PROPERTY C_STANDARD 99)
include(FindOpenMP)
if(OPENMP_FOUND)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif(OPENMP_FOUND)
install(TARGETS ccode_c LIBRARY DESTINATION foam_ct_phantom COMPONENT python)